@@ -7,6 +7,7 @@
 		- Word movement in entry box. (#126)
 		- PID file to avoid duplicate Rofi.
 		- Generic keybinding and launching for modi. (#128)
+		- Auto select mode (previously called zeltak mode) 
 	Bug fixes:
 		- Shift left/right movement between modi (#125)
 		- Document updates (#123,#116,#124,etc.)
